--- a/assets/style.css
+++ b/assets/style.css
@@ -187,6 +187,7 @@ header.page-header .nav .service-list {
     position: relative;
 
     a {
+      display: block;
       color: #3e3e3e;
       text-decoration: none;
 
@@ -265,6 +266,7 @@ header.page-header .nav .info-list {
     border-left: 1px solid #ddd;
 
     a {
+      display: block;
       font-family: var(--txt-sans);
       color: #000;
       text-decoration: none;
