--- a/assets/style.css
+++ b/assets/style.css
@@ -394,14 +394,16 @@ header.page-header .bar .logo h1,
   width: 100%;
 }
 
-
-
 .section-topics .container .main-content.topic-list {
   display: grid;
   max-width: 100%;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
+
+  .topic-item a{
+    display: block;
+  }
 
   .topic-item:first-child {
     grid-area: 1 / 1 / span 2 / span 2;
