--- a/assets/style.css
+++ b/assets/style.css
@@ -526,7 +526,10 @@ header.page-header .bar .logo h1,
         flex-direction: column;
         align-items: center;
         margin: 0 36px;
-        width: 72px;
+        
+        img{
+          width: 72px;
+        }
   
         h4 {
           margin: 18px 0 8px;
