--- a/assets/style.css
+++ b/assets/style.css
@@ -807,7 +807,7 @@ header.page-header .bar .logo h1,
 }
 
 .section-about,
-.section-contact {
+.section-info {
   width: 100%;
   background-color: #000;
   color: #fff;
@@ -853,13 +853,13 @@ header.page-header .bar .logo h1,
   }
 }
 
-.section-contact .container {
+.section-info .container {
   padding: 80px 0;
   display: flex;
 }
 
-.section-contact .container .about-contact,
-.section-contact .container .about-global {
+.section-info .container .info-contact,
+.section-info .container .info-global {
   h3 {
     font-size: 1.6rem;
   }
@@ -871,7 +871,7 @@ header.page-header .bar .logo h1,
   }
 }
 
-.section-contact .container .about-contact {
+.section-info .container .info-contact {
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
@@ -920,7 +920,7 @@ header.page-header .bar .logo h1,
   }
 }
 
-.section-contact .container .about-global {
+.section-info .container .info-global {
   a.global-title {
     display: block;
     color: #fff;
